# pycon_pl_2024

./: .gitignore  README.adoc  pyproject.toml  run_demo_job.py  run_demo_job_with_profiler.py
demo/example_api/: models.py
demo/example_job/: __init__.py  constants.py  ver1.py  ver2.py  ver3.py
