[tool.poetry]
name = "pycon-pl-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.1"
opentelemetry-api = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"


[tool.poetry.group.dev.dependencies]
py-spy = "^0.3.14"
pyinstrument = "^4.7.2"
memory-profiler = "^0.61.0"
objgraph = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo-job = "demo.example_job:report_eligible_ids"
